; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_comedi_8254.c_comedi_8254_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_comedi_8254.c_comedi_8254_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_8254 = type { i32 }

@I8254_CTRL_READBACK_STATUS = common dso_local global i32 0, align 4
@I8254_CTRL_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @comedi_8254_status(%struct.comedi_8254* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.comedi_8254*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.comedi_8254* %0, %struct.comedi_8254** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ugt i32 %7, 2
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

10:                                               ; preds = %2
  %11 = load i32, i32* @I8254_CTRL_READBACK_STATUS, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @I8254_CTRL_READBACK_SEL_CTR(i32 %12)
  %14 = or i32 %11, %13
  store i32 %14, i32* %6, align 4
  %15 = load %struct.comedi_8254*, %struct.comedi_8254** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @I8254_CTRL_REG, align 4
  %18 = call i32 @__i8254_write(%struct.comedi_8254* %15, i32 %16, i32 %17)
  %19 = load %struct.comedi_8254*, %struct.comedi_8254** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @__i8254_read(%struct.comedi_8254* %19, i32 %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %10, %9
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @I8254_CTRL_READBACK_SEL_CTR(i32) #1

declare dso_local i32 @__i8254_write(%struct.comedi_8254*, i32, i32) #1

declare dso_local i32 @__i8254_read(%struct.comedi_8254*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
